#2716 - Pull actions code out of BratAnnotationEditor
- Moved DiamAjax to diam module